--- a/index.html
+++ b/index.html
@@ -39,25 +39,53 @@
           </div>
     </header>
     <body>
+
         
         <div class="container">
             <div class="row">
-                <div class="Strawpoll">
-                    <form>
-                        <input class="form-control vote-option" type="Text" name="text-field-1">
-                        <input class="form-control vote-option" type="Text" name="text-field-2">
-                        <input class="form-control vote-option" type="Text" name="text-field-3">
-                        <input class="form-control vote-option" type="Text" name="text-field-4">
-                        <input class="form-control vote-option" type="Text" name="text-field-5">
-                    </form>
-                </div>
-
-
-
-                <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-                <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-                <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+                <form class="form-horizontal formular">
+                    <fieldset>
+                        <!-- Form Name -->
+                        <legend>Vote your choice</legend>
+                        <!-- Appended checkbox -->
+                        <div class="form-group">
+                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero one</label>
+                          <div class="col-md-12">
+                            <div class="input-group">
+                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
+                              </span>
+                            </div>
+                          </div>
+                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero two</label>
+                          <div class="col-md-12">
+                            <div class="input-group">
+                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
+                              </span>
+                            </div>
+                          </div>
+                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero three</label>
+                          <div class="col-md-12">
+                            <div class="input-group">
+                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
+                              </span>
+                            </div>
+                          </div>
+                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero four</label>
+                          <div class="col-md-12">
+                            <div class="input-group">
+                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
+                              </span>
+                            </div>
+                          </div>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
+
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
     </body>
 </html>
