--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: lightgrey;">
-                        <a class="navbar-brand" href="#">
+                        <a class="navbar-brand navHome" href="">
                             <img src="Logo.png" width="250" height="30" alt="">
                         </a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
@@ -22,15 +22,15 @@
                       <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                           <li class="nav-item active">
-                            <a class="nav-link" href="#">Home
+                            <a class="nav-link navHome" href="javascript:updateBody('home.html')">Home
                               <span class="sr-only">(current)</span>
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">New Strawpoll</a>
+                            <a class="nav-link navNew" href="javascript:updateBody('newStrawpoll.html')">New Strawpoll</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link" href="#">Contact</a>
+                            <a class="nav-link navContact" href="javascript:updateBody('Contacts.html')">Contact</a>
                           </li>
                         </ul>
                     </div>
@@ -83,9 +83,10 @@
             </div>
         </div>
 
-        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
+        <script src="main-Javascript.js" ></script>
     </body>
 </html>
