--- a/index.html
+++ b/index.html
@@ -7,12 +7,18 @@
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/css/bootstrap.min.css" integrity="sha384-9gVQ4dYFwwWSjIDZnLEWnxCjeSWFphJiwGPXr1jddIhOegiu1FwO5qRGvFXOdJZ4" crossorigin="anonymous">
         <link rel="stylesheet" type="text/css" href="style.css">
 
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+
+        <script src="main-Javascript.js" ></script>
+
         <title>Testeroni Maccaroni</title>
     </head>
     <header>
         <div class="container-fluid">
             <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: lightgrey;">
+                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightgrey;">
                         <a class="navbar-brand navHome" href="">
                             <img src="Logo.png" width="250" height="30" alt="">
                         </a>
@@ -22,15 +28,15 @@
                       <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                           <li class="nav-item active">
-                            <a class="nav-link navHome" href="javascript:updateBody('home.html')">Home
+                            <a class="nav-link navHome" href="javascript:updateBody('Navigation/home.html')">Home
                               <span class="sr-only">(current)</span>
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link navNew" href="javascript:updateBody('newStrawpoll.html')">New Strawpoll</a>
+                            <a class="nav-link navNew" href="javascript:updateBody('Navigation/newStrawpoll.html')">New poll</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link navContact" href="javascript:updateBody('Contacts.html')">Contact</a>
+                            <a class="nav-link navContact" href="javascript:updateBody('Navigation/Contacts.html')">Contact</a>
                           </li>
                         </ul>
                     </div>
@@ -39,54 +45,10 @@
           </div>
     </header>
     <body>
+      <div class="body container">
 
-        
-        <div class="container">
-            <div class="row">
-                <form class="form-horizontal formular">
-                    <fieldset>
-                        <!-- Form Name -->
-                        <legend>Vote your choice</legend>
-                        <!-- Appended checkbox -->
-                        <div class="form-group">
-                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero one</label>
-                          <div class="col-md-12">
-                            <div class="input-group">
-                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
-                              </span>
-                            </div>
-                          </div>
-                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero two</label>
-                          <div class="col-md-12">
-                            <div class="input-group">
-                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
-                              </span>
-                            </div>
-                          </div>
-                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero three</label>
-                          <div class="col-md-12">
-                            <div class="input-group">
-                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
-                              </span>
-                            </div>
-                          </div>
-                          <label class="col-md-4 control-label" for="appendedcheckbox">Vote nummero four</label>
-                          <div class="col-md-12">
-                            <div class="input-group">
-                              <input id="appendedcheckbox" name="appendedcheckbox" class="form-control" placeholder="placeholder" type="text">
-                              </span>
-                            </div>
-                          </div>
-                        </div>
-                    </fieldset>
-                </form>
-            </div>
-        </div>
+        <script>updateBody("Navigation/home.html")</script>
 
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
-
-        <script src="main-Javascript.js" ></script>
+      </div>
     </body>
 </html>
