--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang="en">
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -19,8 +19,8 @@
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightgrey;">
-                        <a class="navbar-brand navHome" href="">
-                            <img src="Logo.png" width="250" height="30" alt="">
+                        <a class="navbar-brand navHome" href="javascript:updateBody('Navigation/home.html')">
+                            <img src="Logo.png" class="logo" alt="">
                         </a>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
