--- a/index.html
+++ b/index.html
@@ -19,9 +19,11 @@
         <div class="container-fluid">
             <div class="row">
                 <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightgrey;">
-                        <a class="navbar-brand navHome" href="javascript:updateBody('Navigation/home.html')">
-                            <img src="Logo.png" class="logo" alt="">
-                        </a>
+                  <div class="navbar-brand navHome">
+                    <a  class="logo" href="javascript:updateBody('Navigation/home.html')">
+                      <img src="Logo.png" alt="">
+                    </a>
+                  </div>
                       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                       </button>
