Added email-handler and contact-form

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                             <a class="nav-link navNew" href="javascript:updateBody('Navigation/newStrawpoll.html')">New poll</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link navContact" href="javascript:updateBody('Navigation/Contacts.html')">Contact</a>
+                            <a class="nav-link navContact" href="javascript:updateBody('Navigation/Contacts.html')">Feedback</a>
                           </li>
                         </ul>
                     </div>
