--- a/Navigation/contacts.html
+++ b/Navigation/contacts.html
@@ -4,7 +4,7 @@
 <!-- Form Name -->
 <legend>Feedback ㋡</legend>
 
-<form action="PhpStuff/email.handler.php" method="post" role="form">
+<form action="../PhpStuff/email.handler.php" method="post" role="form">
     <div class="form-group">
         <input type="text" name="name" class="form-control" id="Name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
         <div class="validation"></div>
