--- a/Navigation/contacts.html
+++ b/Navigation/contacts.html
@@ -22,5 +22,5 @@
         <div class="validation"></div>
     </div>
     
-    <button type="submit" class="btn btn-info">Send Message</button>
+    <button type="submit" class="btn btn-info">Send form</button>
 </form>
