--- a/Navigation/contact.html
+++ b/Navigation/contact.html
@@ -3,9 +3,11 @@
         <fieldset>
             <!-- Form Name -->
             <legend></legend>
+            <div class="col-md-12">
             <div class="form-group">
               <input type="text" name="name" class="form-control" id="Name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars" />
               <div class="validation"></div>
+            </div>
             </div>
             
               <div class="col-md-12">
