--- a/Navigation/contact.html
+++ b/Navigation/contact.html
@@ -30,6 +30,18 @@
               </div>
         </fieldset>
     </form>
+    <div class="chart"></div>
+            
+            <script src="https://d3js.org/d3.v5.min.js"></script>
+
+            <script>d3.select("#chart")
+                        .selectAll("div")
+                        .data([4,8,15,16,23,42])
+                        .enter()
+                        .append("div")
+                        .style("height", (d)=> + "px")
+            </script>
+            
     <script>
         $(".pollGroup").on("keypress", "div:last input", function(){appendToPoll();});
     </script>
