--- a/Navigation/newStrawpoll.html
+++ b/Navigation/newStrawpoll.html
@@ -8,7 +8,7 @@
             <div class="form-group pollGroup">
             </div>
         </fieldset>
-        <input type="button" class="btn btn-accept" action="submitStrawpoll.php">
+        <input type="button" class="btn btn-success" action="submitStrawpoll.php" value="Create">
         </input>
     </form>
     <script>
