--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
 
         <script src="main-Javascript.js" ></script>
+        <script src="https://d3js.org/d3.v5.min.js"></script>
 
         <title>Testeroni Maccaroni</title>
     </head>
