--- a/Navigation/newStrawpoll.html
+++ b/Navigation/newStrawpoll.html
@@ -1,5 +1,5 @@
 <div class="row">
-    <form class="form-horizontal formular">
+    <form class="form-horizontal formular" action="PhpStuff/submitStrawpoll.php" method="GET">
         <fieldset>
             <!-- Form Name -->
             <legend></legend>
@@ -8,7 +8,7 @@
             <div class="form-group pollGroup">
             </div>
         </fieldset>
-        <input type="button" class="btn btn-success" action="PhpStuff/submitStrawpoll.php" value="Create">
+        <input type="submit" class="btn btn-success"  value="Create">
         </input>
     </form>
     <script>
