--- a/Navigation/home.html
+++ b/Navigation/home.html
@@ -7,7 +7,7 @@
 
             <div class="col-md-12">
 
-            	<div class="chart"></div>
+            	<div id="chart"></div>
 
             </div>   
 
