--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header>
         <div class="container-fluid">
             <div class="row">
-                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: lightgrey;">
+                <nav class="navbar navbar-expand-lg navbar-light" style="background-color: #40a9b7;">
                   <div class="navbar-brand navHome">
                     <a  class="logo" href="javascript:updateBody('Navigation/home.html')">
                       <img src="Logo.png" alt="">
@@ -31,15 +31,15 @@
                       <div class="collapse navbar-collapse" id="navbarResponsive">
                         <ul class="navbar-nav ml-auto">
                           <li class="nav-item active">
-                            <a class="nav-link navHome" href="javascript:updateBody('Navigation/home.html')">Home
+                            <a class="nav-link navHome" href="javascript:updateBody('Navigation/home.html')" style="color: white; font-weight: bold;">Home
                               <span class="sr-only">(current)</span>
                             </a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link navNew" href="javascript:updateBody('Navigation/newStrawpoll.html')">New poll</a>
+                            <a class="nav-link navNew" href="javascript:updateBody('Navigation/newStrawpoll.html')" style="color: white; font-weight: bold;">New poll</a>
                           </li>
                           <li class="nav-item">
-                            <a class="nav-link navContact" href="javascript:updateBody('Navigation/contact.html')">Feedback</a>
+                            <a class="nav-link navContact" href="javascript:updateBody('Navigation/contact.html')" style="color: white; font-weight: bold;">Feedback</a>
                           </li>
                         </ul>
                     </div>
