--- a/Navigation/home.html
+++ b/Navigation/home.html
@@ -6,18 +6,22 @@
             <legend></legend>
 
             <div class="col-md-12">
-
-            	<div id="chart"></div>
-
+            	 <div id="chart"></div>
             </div>   
 
+            <div class=" col-md-12">
+              <svg width="100" height="100">
+                 <circle cx="50" cz="50" cy="50" r="50" fill="yellow" />
+                 Sorry, your browser does not support inline SVG.
+              </svg> 
+            </div>
     <script>
-    	d3.select("#chart")
-          .selectAll("div")
-          .data([4,8,15,16,23,42])
-          .enter()
-          .append("div")
-          .style("height", (d)=> + "px")
+    	d3.select('#chart')
+      .selectAll("div")
+      .data([20, 30, 50, 70, 100, 150])
+      .enter()
+      .append("div")
+      .style("height", (d) => d + "px")
             
         $(".pollGroup").on("keypress", "div:last input", function(){appendToPoll();});
     
