--- a/Navigation/newStrawpoll.html
+++ b/Navigation/newStrawpoll.html
@@ -10,6 +10,7 @@
         </fieldset>
         <input type="submit" class="btn btn-success"  value="Create">
         </input>
+        <input type="text" class="hidden" name="maxRow" value="0"></input>
     </form>
     <script>
       appendToPoll();
