--- a/Navigation/newStrawpoll.html
+++ b/Navigation/newStrawpoll.html
@@ -3,14 +3,14 @@
         <fieldset>
             <!-- Form Name -->
             <legend></legend>
-            <input name="appendedcheckbox" class="form-control pollOption pollOptionHeader" placeholder="Enter question" type="text" />
+            <input name="title" class="form-control pollOption pollOptionHeader" placeholder="Enter question" type="text" />
             <!-- Appended checkbox -->
             <div class="form-group pollGroup">
             </div>
         </fieldset>
         <input type="submit" class="btn btn-success"  value="Create">
         </input>
-        <input type="text" class="hidden" name="maxRow" value="0"></input>
+        <input type="text" class="hidden jqMaxRow" name="maxRow" value="0"></input>
     </form>
     <script>
       appendToPoll();
