quick fixes for last commit

--- a/Navigation/newStrawpoll.html
+++ b/Navigation/newStrawpoll.html
@@ -10,7 +10,7 @@
         </fieldset>
         <input type="submit" class="btn btn-success"  value="Create">
         </input>
-        <input type="text" class="hidden jqMaxRow" name="maxRow" value="0"></input>
+        <input type="text" class="jqMaxRow" name="maxRow" value="0" style="visibility: hidden"></input>
     </form>
     <script>
       appendToPoll();
