--- a/Navigation/home.html
+++ b/Navigation/home.html
@@ -5,10 +5,10 @@
             <div class="cards">
                 <div class="col-sm">
                     <div class="card" style="width: 18rem;">
-                        <img class="card-img-top" src="mitarbeiterfoto-2.png" alt="Paul Seibel" style="min-height: 180px; min-width: 286px; max-width: 286px; max-height: 286px;">
+                        <img class="card-img-top" src="mitarbeiterfoto-2.png" alt="Paul" style="min-height: 180px; min-width: 286px; max-width: 286px; max-height: 286px;">
                         <div class="card-body">
-                            <h5 class="card-title">Paul Seibel</h5>
-                            <p class="card-text">Paul ist Entwickler dieser Seite und in der Klasse B1IT.</p>
+                            <h5 class="card-title">Paul</h5>
+                            <p class="card-text">Paul ist Entwickler dieser Seite.</p>
                         </div>
                     </div>
                 </div>
@@ -17,7 +17,7 @@
                         <img class="card-img-top" src="mitarbeiterfoto-1.png" alt="Morice van Eckeveld" style="min-height: 180px; min-width: 286px; max-width: 286px; max-height: 286px;">
                         <div class="card-body">
                             <h5 class="card-title">Morice van Eckeveld</h5>
-                            <p class="card-text">Morice ist Entwickler dieser Seite und in der Klasse B1IT.</p>
+                            <p class="card-text">Morice ist Entwickler dieser Seite.</p>
                         </div>
                     </div>
                 </div>
